--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -1,43 +1,48 @@
 .our-clients {
   min-width: 320px;
   background-color: $secondaryColor;
-  margin-top: 60px;
   display: flex;
   margin: 0 auto;
+}
 
-  &__overlay {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  &__headline {
-    display: flex;
-    width: 314px;
-    margin-top: 0;
-    margin-bottom: 50px;
-    justify-content: center;
-    align-items: center;
-  }
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    max-width: 450px;
+.our-clients__overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.our-clients__headline {
+  display: flex;
+  width: 314px;
+  margin-top: 60px;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+}
+.our-clients__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 60px;
+  gap: 30px;
+}
+.our-clients__item {
+  fill: $colorFiller;
 
-    margin-bottom: 60px;
+  &:hover svg {
+    animation: cursormoveout 0.5s forwards;
   }
-  &__item {
-    fill: $colorFiller;
-    flex-basis: calc((100% - 1 * 30px) / 2);
-    width: 210px;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    animation: cursormovein 0.5s forwards;
-    &:hover svg {
-      animation: cursormoveout 0.5s forwards;
-    }
-  }
+}
+.our-clients__icon {
+  fill: $colorFiller;
+  display: flex;
+  width: 210px;
+  height: 92px;
+  justify-content: center;
+  border: 1px solid $colorFiller;
+  border-radius: 4px;
+  animation: cursormovein 0.5s forwards;
 }
 
 @keyframes cursormoveout {
@@ -61,49 +66,36 @@
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
-  .our-clients__overlay {
-    width: 738px;
-    margin: 0 auto;
-    flex-direction: column;
-    align-items: center;
+  .our-clients {
+    min-width: 768px;
   }
-  .our-clients__list {
-    width: 738px;
-    gap: 30px;
-    display: flex;
-    flex-wrap: wrap;
+  .our-clients__overlay {
+    min-width: 768px;
   }
   .our-clients__item {
     width: 226px;
-    flex-basis: calc((100% - 60px) / 3);
   }
-  .our-clients__headline {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .our-clients__icon {
+    width: 226px;
   }
 }
-
 @media (min-width: 1200px) {
   .our-clients {
-    width: 1170px;
-    display: flex;
-    margin: 0 auto;
+    min-width: 1200px;
   }
   .our-clients__overlay {
-    margin: 0 auto;
-  }
-  .our-clients__headline {
-    width: 210px;
+    min-width: 1200px;
   }
   .our-clients__list {
-    flex-wrap: nowrap;
-    gap: 30px;
-    width: 1170px;
-    margin: 0;
+    margin: 0 auto;
   }
   .our-clients__item {
-    flex-basis: calc((100% - 5 * 30px) / 6);
     width: 170px;
+  }
+  .our-clients__icon {
+    width: 170px;
+  }
+  .our-clients__headline {
+    margin-top: 0;
   }
 }
