--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ main {
 }
 
 .container {
-  min-width: 320px;
+  width: 90%;
 }
 
 ul {
@@ -46,7 +46,7 @@ h4 {
 
 @media (min-width: 320px) {
   .container {
-    min-width: 320px;
+    max-width: 320px;
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
@@ -802,7 +802,6 @@ h4 {
 }
 
 .block__item {
-  min-width: 270px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -831,7 +830,6 @@ h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-width: 270px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -842,7 +840,6 @@ h4 {
 }
 
 .attribute__icon {
-  width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
@@ -858,14 +855,12 @@ h4 {
   display: flex;
   margin-top: 30px;
   margin-bottom: 10px;
-  min-width: 270px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
 .attribute__text {
-  width: 450px;
   color: #757575;
   font-size: 14px;
   line-height: 1.71;
