--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -8,7 +8,7 @@ main {
   background-color: $secondaryColor;
 }
 .container {
-  min-width: 320px;
+  width: 90%;
 }
 ul {
   list-style-type: none;
@@ -35,7 +35,7 @@ h4 {
 }
 @media (min-width: 320px) {
   .container {
-    min-width: 320px;
+    max-width: 320px;
   }
 }
 
