--- a/sass/components/_block.scss
+++ b/sass/components/_block.scss
@@ -1,35 +1,42 @@
 .block {
   padding-bottom: 0;
   margin-bottom: 60px;
+  width: 100vw;
 }
+
 .block__list {
+  width: 100vw;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
+
 .block__item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin: 0 auto;
 }
+
 .block__item:not(:last-child) {
   margin-bottom: 30px;
 }
+
 .block__delay {
   margin: 0 auto;
 }
 
 .attribute {
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 .attribute__icon {
-  height: 120px;
-  background-color: $thirdBackgroundColor;
+  width: 90vw;
+  background-color: #f5f4fa;
   border-radius: 4px;
-  justify-content: center;
-  padding: 25px 190px;
 }
 
 .attribute__title {
@@ -38,12 +45,40 @@
   margin-bottom: 10px;
   justify-content: center;
 }
+
 .attribute__text {
-  color: $alternativeColor;
+  color: #757575;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   margin: 0;
+}
+@media (min-width: 480px) and (max-width: 767px) {
+  .block__list {
+    width: 450px;
+  }
+  .block__item {
+    max-width: 450px;
+  }
+  .block__item:nth-child(n) {
+    margin-bottom: 0;
+  }
+  .attribute {
+    width: 450px;
+  }
+  .attribute__icon {
+    justify-content: center;
+    width: 450px;
+    height: 120px;
+    padding: 25px 190px;
+  }
+  .attribute__title {
+    width: 450px;
+  }
+  .attribute__text {
+    width: 450px;
+    height: 50px;
+  }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .block {
@@ -51,15 +86,13 @@
   }
   .block__list {
     width: 738px;
+    flex-direction: row;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
-    margin: 0 auto;
   }
-
   .block__item {
     max-width: 354px;
-    flex-basis: calc((100% - 1 * 30px) / 2);
+    flex-basis: calc((100% - 30px) / 2);
   }
   .block__item:nth-child(n) {
     margin-bottom: 0;
@@ -92,11 +125,12 @@
   .block__list {
     width: 1170px;
     display: flex;
+    flex-direction: row;
     gap: 30px;
   }
   .block__item {
     width: 270px;
-    flex-basis: calc((100% - 3 * 30px) / 4);
+    flex-basis: calc((100% - 90px) / 4);
   }
   .block__item:nth-child(n) {
     margin-bottom: 0;
