--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -1,5 +1,5 @@
 .main-page {
-  max-width: 480px;
+  width: 100vw;
   height: 400px;
   background-color: $secondaryBackgroundColor;
   background-image: linear-gradient(
@@ -12,7 +12,6 @@
   background-position: center;
   background-repeat: no-repeat;
   margin: 0 auto;
-  margin-bottom: 60px;
 }
 @media (min-device-pixel-ratio: 2),
   (min-resolution: 192pi),
@@ -70,6 +69,48 @@
   margin: 0 auto;
 }
 
+@media (min-width: 480px) and (max-width: 767px) {
+  .main-page {
+    min-width: 480px;
+    height: 400px;
+    background-color: $secondaryBackgroundColor;
+    background-image: linear-gradient(
+        0deg,
+        rgba(47, 48, 58, 0.4) 0%,
+        rgba(47, 48, 58, 0.4) 100%
+      ),
+      url("../images/header/Img-header_768_400.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192pi),
+    (min-resolution: 2dppx) {
+    .main-page {
+      background-image: linear-gradient(
+          0deg,
+          rgba(47, 48, 58, 0.4) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("../images/header/Img-header_1536_800.png");
+    }
+  }
+  @media (min-device-pixel-ratio: 3),
+    (min-resolution: 268pi),
+    (min-resolution: 3dppx) {
+    .main-page {
+      background-image: linear-gradient(
+          0deg,
+          rgba(47, 48, 58, 0.4) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("../images/header/Img-header_2304_1200.jpg");
+    }
+  }
+}
+
 @media (min-width: 768px) and (max-width: 1199px) {
   .main-page {
     min-width: 768px;
@@ -85,7 +126,6 @@
     background-position: center;
     background-repeat: no-repeat;
     margin: 0 auto;
-    margin-bottom: 60px;
   }
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192pi),
@@ -164,46 +204,5 @@
   }
   .main-page__button {
     margin-bottom: 200px;
-  }
-}
-@media (min-width: 1600px) {
-  .main-page {
-    min-width: 1600px;
-    height: 600px;
-    background-color: $secondaryBackgroundColor;
-    background-image: linear-gradient(
-        0deg,
-        rgba(47, 48, 58, 0.4) 0%,
-        rgba(47, 48, 58, 0.4) 100%
-      ),
-      url("../images/header/Img-header_1600_600.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin: 0 auto;
-  }
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192pi),
-    (min-resolution: 2dppx) {
-    .main-page {
-      background-image: linear-gradient(
-          0deg,
-          rgba(47, 48, 58, 0.4) 0%,
-          rgba(47, 48, 58, 0.4) 100%
-        ),
-        url("../images/header/Img-header_3200_1200.jpg");
-    }
-  }
-  @media (min-device-pixel-ratio: 3),
-    (min-resolution: 268pi),
-    (min-resolution: 3dppx) {
-    .main-page {
-      background-image: linear-gradient(
-          0deg,
-          rgba(47, 48, 58, 0.4) 0%,
-          rgba(47, 48, 58, 0.4) 100%
-        ),
-        url("../images/header/Img_header_4800_1800.jpg");
-    }
   }
 }
