--- a/sass/components/_ourteam.scss
+++ b/sass/components/_ourteam.scss
@@ -1,23 +1,26 @@
 .ourteam {
   background-color: $thirdBackgroundColor;
-  min-width: 320px;
+  width: 100vw;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
-  &__delay {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 auto;
-  }
 }
+.ourteam__delay {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .ourteam__list {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
   margin: 0;
+  gap: 30px;
 }
 .ourteam__picture {
-  width: 450px;
-  height: 460px;
+  width: 100%;
 }
 
 .ourteam__item {
@@ -78,23 +81,15 @@
     }
   }
 }
-@media (min-width: 768px) and (max-width: 1199px) {
-  .ourteam {
-    width: 768px;
-  }
-  .ourteam__list {
-    display: flex;
-    width: 738px;
-    flex-wrap: wrap;
-    gap: 30px;
-    margin-bottom: 60px;
-  }
+
+@media (min-width: 480px) and (max-width: 767px) {
   .ourteam__picture {
-    width: 354px;
-    height: 374px;
+    width: 450px;
+    height: 460px;
   }
   .ourteam__item {
-    flex-basis: calc((100% - 1 * 30px) / 2);
+    width: 450px;
+    height: 622px;
   }
   .ourteam__item:not(:last-child) {
     margin-bottom: 0;
@@ -103,17 +98,40 @@
     margin-bottom: 0;
   }
 }
-@media (min-width: 1200px) {
-  .ourteam {
-    margin: 0 auto;
+@media (min-width: 768px) and (max-width: 1199px) {
+  .ourteam__list {
+    display: flex;
+    width: 768px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-bottom: 62px;
   }
   .ourteam__delay {
-    flex-direction: column;
-    align-items: center;
+    width: 768px;
   }
+  .ourteam__item {
+    width: 354px;
+    height: 536px;
+    margin: 0;
+  }
+  .ourteam__picture {
+    width: 354px;
+    height: 374px;
+  }
+}
+.ourteam__item:not(:last-child) {
+  margin-bottom: 0;
+}
+.ourteam__item:last-child {
+  margin-bottom: 0;
+}
+
+@media (min-width: 1200px) {
   .ourteam__list {
     display: flex;
     width: 1170px;
+    flex-direction: row;
     gap: 30px;
   }
   .ourteam__picture {
@@ -122,7 +140,6 @@
   }
   .ourteam__item {
     width: 270px;
-
     flex-basis: calc((100% - 3 * 30px) / 4);
   }
   .ourteam__item:nth-child(n) {
