--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,11 +1,12 @@
 .products {
+  margin: 0 auto;
   display: flex;
-  flex-wrap: wrap;
+  margin: 0 auto;
   justify-content: center;
   &__container {
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
   }
   &__name {
     font-weight: 700;
@@ -48,10 +49,11 @@
 }
 
 .buttons {
-  width: 572px;
+  width: 90%;
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
-  margin-bottom: 34px;
+  margin-bottom: 40px;
   margin-top: 0;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -60,6 +62,7 @@
     background-color: $thirdBackgroundColor;
     font-size: 16px;
     line-height: 1.62;
+    letter-spacing: 0.03em;
     cursor: pointer;
     padding: 6px 22px;
     border: 0px solid;
@@ -78,14 +81,14 @@
 }
 
 .grid {
-  width: 1170px;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   padding: 0;
   margin: 0;
   &__item {
-    flex-basis: calc((100% - 2 * 30px) / 3);
+    width: 90%;
     border-bottom: 1px solid #eeeeee;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -97,5 +100,89 @@
         transform: translatey(0);
       }
     }
+  }
+}
+@media (min-width: 480px) {
+  .buttons {
+    max-width: 392px;
+    height: 91px;
+  }
+  .grid {
+    max-width: 480px;
+  }
+  .grid__item {
+    max-width: 450px;
+  }
+}
+@media (max-width: 767px) {
+  @include hide-on-mobile;
+}
+@media (min-width: 1200px) {
+  .products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    &__container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &__name {
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 2;
+      width: 322px;
+      padding-left: 24px;
+      margin-top: 20px;
+      margin-bottom: 4px;
+    }
+    &__description {
+      color: $alternativeColor;
+      font-size: 16px;
+      line-height: 1.87;
+      width: 322px;
+      padding-left: 24px;
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+    &__overlay {
+      position: absolute;
+      width: 370px;
+      height: 294px;
+      padding: 49px 45px 49px 24px;
+      background-color: rgba(33, 150, 243, 0.9);
+      font-weight: 400;
+      font-size: 18px;
+      color: $secondaryColor;
+      top: 0;
+      left: 0;
+      transform: translateY(100%);
+      transition: transform 250ms ease;
+    }
+    &__item {
+      position: relative;
+      width: 370px;
+      height: 294px;
+      overflow: hidden;
+    }
+  }
+
+  .buttons {
+    width: 572px;
+    display: flex;
+    gap: 8px;
+    margin-bottom: 34px;
+    margin-top: 0;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .grid {
+    width: 1170px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 0;
+    margin: 0;
   }
 }
