--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ h4 {
   padding-top: 60px;
   padding-bottom: 60px;
   margin: 0 auto;
-  min-width: 100%;
+  width: 100vw;
 }
 .footer:hover, .footer:focus {
   color: #2196f3;
@@ -420,9 +420,15 @@ h4 {
   gap: 20px;
 }
 .joinus__headline {
-  width: 113px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 146px;
   text-transform: uppercase;
   color: #ffffff;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0;
 }
 
@@ -466,7 +472,7 @@ h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-width: 358px;
+  width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -1325,7 +1331,7 @@ h4 {
   margin-top: 0;
   margin-bottom: 50px;
 }
-.our-clients__list {
+.our-clients .our-clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1341,7 +1347,7 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.our-clients__item {
+.our-clients .our-clients__item {
   fill: #afb1b8;
   height: 92px;
   border-radius: 4px;
@@ -1359,13 +1365,12 @@ h4 {
   -webkit-animation: cursormovein 0.5s forwards;
           animation: cursormovein 0.5s forwards;
 }
-.our-clients__item:hover svg {
+.our-clients .our-clients__item:hover {
   -webkit-animation: cursormoveout 0.5s forwards;
           animation: cursormoveout 0.5s forwards;
 }
-.our-clients__item .our-clients__icon {
+.our-clients .our-clients__icon {
   width: 106px;
-  border: 0;
 }
 
 @-webkit-keyframes cursormoveout {
@@ -1411,10 +1416,10 @@ h4 {
 }
 @media (min-width: 480px) and (max-width: 767px) {
   .our-clients {
-    width: 450px;
+    max-width: 450px;
   }
   .our-clients__item {
-    width: 210px;
+    max-width: 210px;
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
@@ -1422,10 +1427,29 @@ h4 {
     width: 738px;
   }
   .our-clients__list {
-    width: 450px;
+    width: 738px;
   }
-  .our-clients__icon {
-    width: 226px;
+  .our-clients__item {
+    max-width: 226px;
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
+}
+@media (min-width: 1200px) {
+  .our-clients {
+    width: 1170px;
+  }
+  .our-clients__list {
+    width: 1170px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  .our-clients__item {
+    max-width: 170px;
   }
 }
 .modal {
