--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,7 +3,7 @@
   padding-top: 60px;
   padding-bottom: 60px;
   margin: 0 auto;
-  min-width: 100%;
+  width: 100vw;
 
   &:hover,
   &:focus {
@@ -69,9 +69,11 @@
   align-items: center;
   gap: 20px;
   &__headline {
-    width: 113px;
+    display: flex;
+    width: 146px;
     text-transform: uppercase;
     color: $secondaryColor;
+    justify-content: center;
     margin: 0;
   }
 }
@@ -99,7 +101,7 @@
   }
   &__input {
     display: flex;
-    min-width: 358px;
+    width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -145,6 +147,8 @@
       box-shadow: inset 200px 0 0 0 $boxShadowColor;
     }
   }
+}
+@media (min-width: 480px) and (max-width: 767px) {
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .footer__block {
