--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -19,10 +19,12 @@ h2 {
   font-size: 28px;
   line-height: 1.17;
 }
+
 h5 {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
 }
 h4 {
   font-weight: 700;
