--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,8 +1,9 @@
 .footer {
+  display: flex;
+  justify-content: center;
   background-color: $secondaryBackgroundColor;
   padding-top: 60px;
   padding-bottom: 60px;
-  margin: 0 auto;
   width: 100vw;
 
   &:hover,
@@ -101,7 +102,7 @@
   }
   &__input {
     display: flex;
-    width: 358px;
+    width: 90vw;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -149,6 +150,16 @@
   }
 }
 @media (min-width: 480px) and (max-width: 767px) {
+  .contact__form {
+    justify-content: center;
+    margin: 0 auto;
+  }
+  .contact-form__grid {
+    width: 405px;
+  }
+  .contact-form__input {
+    width: 405px;
+  }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .footer__block {
@@ -196,13 +207,14 @@
     padding-bottom: 9px;
   }
   .contact-form {
-    display: flex;
     width: 570px;
-    align-items: start;
     gap: 20px;
   }
+  .contact-form__input {
+    width: 358px;
+  }
   .contact-form__grid {
+    width: 570px;
     flex-direction: row;
-    gap: 12px;
   }
 }
