--- a/sass/components/_ourteam.scss
+++ b/sass/components/_ourteam.scss
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
+  padding-bottom: 60px;
 }
 .ourteam__delay {
   display: flex;
@@ -63,7 +64,7 @@
   display: flex;
   width: 206px;
   gap: 10px;
-  margin-bottom: 18px;
+  margin-bottom: 30px;
   &__icons {
     display: flex;
     fill: #afb1b8;
@@ -85,17 +86,9 @@
 @media (min-width: 480px) and (max-width: 767px) {
   .ourteam__picture {
     width: 450px;
-    height: 460px;
   }
   .ourteam__item {
     width: 450px;
-    height: 622px;
-  }
-  .ourteam__item:not(:last-child) {
-    margin-bottom: 0;
-  }
-  .ourteam__item:last-child {
-    margin-bottom: 0;
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
@@ -149,5 +142,8 @@
     width: 210px;
     margin-bottom: 50px;
     margin-top: 0;
+  }
+  .ourteam__position {
+    margin: 0;
   }
 }
