--- a/css/main.css
+++ b/css/main.css
@@ -874,7 +874,7 @@ h4 {
 }
 
 .attribute {
-  width: 100vw;
+  width: 90vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -917,7 +917,7 @@ h4 {
     width: 450px;
   }
   .block__item {
-    max-width: 450px;
+    width: 450px;
   }
   .block__item:nth-child(n) {
     margin-bottom: 0;
@@ -1313,7 +1313,7 @@ h4 {
   }
 }
 .our-clients {
-  width: 100vw;
+  width: 90vw;
   background-color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1345,7 +1345,7 @@ h4 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 100vw;
+  width: 90vw;
   margin-top: 0;
   margin-bottom: 30px;
   margin-top: 60px;
@@ -1354,7 +1354,7 @@ h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100vw;
+  width: 90vw;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -1435,18 +1435,25 @@ h4 {
 }
 @media (min-width: 480px) and (max-width: 767px) {
   .our-clients {
-    max-width: 450px;
+    width: 450px;
   }
   .our-clients__item {
-    max-width: 210px;
+    width: 210px;
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .our-clients {
     width: 738px;
   }
+  .our-clients__headline {
+    margin-top: 58px;
+    margin-bottom: 30px;
+  }
   .our-clients__list {
     width: 738px;
+    gap: 30px;
+    margin-top: 0;
+    margin-bottom: 60px;
   }
   .our-clients__item {
     max-width: 226px;
