--- a/sass/components/_block.scss
+++ b/sass/components/_block.scss
@@ -30,7 +30,7 @@
 }
 
 .attribute {
-  width: 100vw;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,7 +61,7 @@
     width: 450px;
   }
   .block__item {
-    max-width: 450px;
+    width: 450px;
   }
   .block__item:nth-child(n) {
     margin-bottom: 0;
