--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -1,5 +1,5 @@
 .our-clients {
-  width: 100vw;
+  width: 90vw;
   background-color: $secondaryColor;
   display: flex;
   justify-content: center;
@@ -15,7 +15,7 @@
   &__headline {
     display: flex;
     justify-content: center;
-    width: 100vw;
+    width: 90vw;
     margin-top: 0;
     margin-bottom: 30px;
     margin-top: 60px;
@@ -23,7 +23,7 @@
 
   .our-clients__list {
     display: flex;
-    width: 100vw;
+    width: 90vw;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 30px;
@@ -70,18 +70,25 @@
 
 @media (min-width: 480px) and (max-width: 767px) {
   .our-clients {
-    max-width: 450px;
+    width: 450px;
   }
   .our-clients__item {
-    max-width: 210px;
+    width: 210px;
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .our-clients {
     width: 738px;
   }
+  .our-clients__headline {
+    margin-top: 58px;
+    margin-bottom: 30px;
+  }
   .our-clients__list {
     width: 738px;
+    gap: 30px;
+    margin-top: 0;
+    margin-bottom: 60px;
   }
   .our-clients__item {
     max-width: 226px;
