--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ main {
 }
 
 .container {
-  width: 90%;
+  width: 90vw;
 }
 
 ul {
@@ -874,7 +874,7 @@ h4 {
 }
 
 .attribute {
-  width: 90vw;
+  width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -888,7 +888,7 @@ h4 {
 }
 
 .attribute__icon {
-  width: 90vw;
+  width: 100vw;
   background-color: #f5f4fa;
   border-radius: 4px;
 }
@@ -958,7 +958,7 @@ h4 {
         flex-wrap: wrap;
   }
   .block__item {
-    max-width: 354px;
+    width: 354px;
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
         flex-basis: calc((100% - 30px) / 2);
   }
@@ -974,7 +974,7 @@ h4 {
     padding: 25px 142px;
   }
   .attribute__title {
-    min-width: 354px;
+    width: 354px;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
@@ -1143,7 +1143,7 @@ h4 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 90%;
+  width: 100vw;
   margin: 0;
   gap: 30px;
 }
@@ -1313,7 +1313,7 @@ h4 {
   }
 }
 .our-clients {
-  width: 90vw;
+  width: 100vw;
   background-color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1345,7 +1345,7 @@ h4 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 90vw;
+  width: 100vw;
   margin-top: 0;
   margin-bottom: 30px;
   margin-top: 60px;
@@ -1354,7 +1354,7 @@ h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 90vw;
+  width: 100vw;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -1456,7 +1456,7 @@ h4 {
     margin-bottom: 60px;
   }
   .our-clients__item {
-    max-width: 226px;
+    width: 226px;
     -ms-flex-preferred-size: calc((100% - 60px) / 3);
         flex-basis: calc((100% - 60px) / 3);
   }
