--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -1,5 +1,5 @@
 .our-clients {
-  width: 90vw;
+  width: 100vw;
   background-color: $secondaryColor;
   display: flex;
   justify-content: center;
@@ -15,7 +15,7 @@
   &__headline {
     display: flex;
     justify-content: center;
-    width: 90vw;
+    width: 100vw;
     margin-top: 0;
     margin-bottom: 30px;
     margin-top: 60px;
@@ -23,7 +23,7 @@
 
   .our-clients__list {
     display: flex;
-    width: 90vw;
+    width: 100vw;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 30px;
@@ -91,7 +91,7 @@
     margin-bottom: 60px;
   }
   .our-clients__item {
-    max-width: 226px;
+    width: 226px;
     flex-basis: calc((100% - 2 * 30px) / 3);
   }
 }
