blocks nad ourclients icons

--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -72,6 +72,9 @@
   .our-clients {
     width: 450px;
   }
+  .our-clients__list {
+    margin-bottom: 60px;
+  }
   .our-clients__item {
     width: 210px;
   }
