--- a/css/main.css
+++ b/css/main.css
@@ -849,6 +849,9 @@ h4 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 30px;
 }
 
@@ -1436,6 +1439,9 @@ h4 {
 @media (min-width: 480px) and (max-width: 767px) {
   .our-clients {
     width: 450px;
+  }
+  .our-clients__list {
+    margin-bottom: 60px;
   }
   .our-clients__item {
     width: 210px;
